[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-fault-detector"
dynamic = ["version", "dependencies", "optional-dependencies"]
authors = [
  { name="AEFDI", email="aefdi@iee.fraunhofer.de" },
]
description = "Automated fault detection in renewable energy assets and power grids."
readme = "README.md"
requires-python = ">=3.9,<3.13"
classifiers = [
    'Development Status :: 4 - Beta',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
license = { file = "LICENSE" }


[project.urls]
repository = "https://github.com/AEFDI/EnergyFaultDetector"
documentation = "https://aefdi.github.io/EnergyFaultDetector/"

[project.scripts]
quick_fault_detector = "energy_fault_detector.main:main"

[tool.setuptools.package-data]
"energy_fault_detector" = [
    "logging.yaml",
    "VERSION",
    "ABOUT",
    "c2c_options.yaml",
    "base_config.yaml"
]
